--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,7 @@
    padding: 0;
    box-sizing: border-box;
    font-family: "Roboto", sans-serif;
+	scroll-behavior: smooth;
 }
 :root{
    --white: #ffffff;
@@ -40,6 +41,8 @@ body{
 }
 .header__main{
 	display: flex;
+	justify-content: center;
+   align-items: center;
 }
 .header__right{
    display: flex;
@@ -49,10 +52,19 @@ body{
 .header .left__logo img{
    display: flex;
 }
-
+.logo__mobile{
+	display: none;
+	margin: 0 10px;
+}
+.logo__mobile img{
+	width: 40px;
+	height: 40px;
+	object-fit: cover;
+}
 .header ul{
 	position: relative;
 	display: flex;
+	align-items: center;
 }
 .header ul li{
 	position: relative;
@@ -82,6 +94,11 @@ body{
 }
 .header ul li a:hover::after{
 	width: 30%;
+}
+.logo__mobile,
+.home__mobile,
+.group__mobile{
+	display: none;
 }
 .nav__img{
 	position: relative;
@@ -136,33 +153,98 @@ body{
 }
 
 .search{
-position: relative;
-max-width: 500px;
-width: 500px;
-margin: 0 10px;
+	position: relative;
+	max-width: 500px;
+	width: 500px;
+	margin: 0 10px;
 }
 
 .search label{
-position: relative;
-width: 100%;
+	position: relative;
+	width: 100%;
 }
 .search label input{
-width: 100%;
-height: 40px;
-border-radius: 40px;
-padding: 5px  20px;
-padding-left: 35px;
-outline: none;
-border: 1px solid var(--gray-main);
+	width: 100%;
+	height: 40px;
+	border-radius: 40px;
+	padding: 5px  20px;
+	padding-left: 35px;
+	outline: none;
+	border: 1px solid var(--gray-main);
 }
+.dropdown__nav .ri-search-line,
 .search label i{
-position: absolute;
-top: 0;
-right: 20px;
-font-size: 16px;
-color: var(--gray-words);
+	position: absolute;
+	top: 0;
+	right: 20px;
+	font-size: 16px;
+	color: var(--gray-words);
 }
-
+.search__mobile{
+	display: none;
+}
+.search__mobile{
+	position: relative;
+	width: 100%;
+	max-width: 100%;
+}
+	
+.search__mobile label{
+	position: relative;
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.search__mobile label input{
+	width: 100%;
+	height: 40px;
+	border-radius: 8px;
+	padding: 5px  20px;
+	padding-left: 35px;
+	outline: none;
+	border: 1px solid var(--gray-main);
+}
+.search__dropdown{
+	display: none;
+	position: absolute;
+	top: 20px;
+	right: 0px;
+	width: 364px;
+	background: var(--white);
+	border-radius: 16px;
+	box-shadow: 0 7px 25px rgba(0, 0, 0, 0.08);
+	opacity: 0;
+	z-index: 5;
+	transition: opacity 0.3s ease;
+}
+.search__button{
+	margin-left:10px;
+	display: flex;
+	justify-content: flex-end;
+	align-items: center;
+}
+.search__button button{
+	background-color: var(--blue);
+	color: white;
+	font-size: 14px;
+	font-weight: 400;
+	text-align: center;
+	border-radius: 8px;
+	padding: 10px;
+	border: none;
+	transition: background-color 0.3s ease;
+}
+.search__button button:hover{
+	background-color: var(--blue-dark);
+}
+.search__mobile:hover .search__dropdown{
+	display: block;
+	opacity: 1;
+}
+.ri-home-2-line,
+.ri-global-line,
+.ri-search-line,
 .ri-bell-line,
 .ri-edit-2-line{
 	display: flex;
@@ -812,6 +894,30 @@ color: var(--gray-words);
 	font-weight: 100;
 }
 
+.scrollup {
+	position: fixed; 
+	color: #fff; 
+	background-color: var(--blue); 
+	right: 20px; 
+	bottom: 0px; 
+	padding: 4px 10px; 
+	font-size: 20px; 
+	border-top-left-radius: 4px; 
+	border-top-right-radius: 4px; 
+	cursor: pointer; 
+	display: block; 
+	text-align: center; 
+	z-index: 1000;
+	opacity: 0;
+	transition: opacity 0.3s ease;
+ }
+.scrollup.active{
+	opacity: 1;
+ }
+.scrollup:hover {
+	background-color: var(--blue-dark); 
+ }
+
 ::-webkit-scrollbar{
 	background: var(--gray-main);
 	width: 10px;
@@ -829,9 +935,12 @@ color: var(--gray-words);
 		display: block;
 	}
 }
-@media  screen and (max-width: 1100px){
+@media  screen and (max-width: 1280px){
 	.forum{
 		max-width: 930px;
+	}
+	.image__box{
+		width: calc(33.3% - 6px);
 	}
 }
 @media  screen and (max-width: 1000px){
@@ -839,7 +948,8 @@ color: var(--gray-words);
 		flex-direction: column;
 	}
 	.forum__main{
-		max-width: 100%;
+		max-width: 80%;
+		margin: 0 auto;
 	}
 	.forum__right{
 		max-width: 80%;
@@ -849,8 +959,37 @@ color: var(--gray-words);
 	.right__details{
 		margin-left: 0px;
 	}
+	.search{
+		width: 100%;
+	}
+}
+@media  screen and (max-width: 800px){
+	.logo__pc,
+	.home__pc,
+	.group__pc,
+	.search{
+		display: none;
+	}
+	.logo__mobile,
+	.home__mobile,
+	.group__mobile,
+	.search__mobile{
+		display: block;
+	}
+	.group__dropdown{
+		top: 20px;
+	}
+	.search__dropdown{
+		right: -160px;
+	}
 }
 @media  screen and (max-width: 600px){
+	.header{
+		padding: 0 40px 0 40px;
+	}
+	.forum__main{
+		max-width: 100%;
+	}
 	.forum__right{
 		max-width: 100%;
 		margin: 0 auto;
@@ -859,25 +998,19 @@ color: var(--gray-words);
 	.image__box{
 		width: 100%;
 	}
-	/* .header{
-		height: auto;
+	.group__dropdown{
+   	left: -85px;
 	}
-	.search{
-		max-width: 90%;
+}
+@media  screen and (max-width: 500px){
+	.header{
+		padding: 0;
+	}	
+	.header ul li a {
+		margin: 0 10px;
 	}
-	.header,
-	.header__left,
-	.header__main,
-	.header__right{
-		flex-direction: column;
+	.group__dropdown{
+   	left: -105px;
 	}
-	.header__left{
-		order: 1;
-	}
-	.header__main{
-		order: 3;
-	}
-	.header__right{
-		order: 2;
-	} */
+
 }
